plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'kr.co.souso'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	// mysql
	implementation 'mysql:mysql-connector-java:8.0.30'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// jwt
	implementation 'io.jsonwebtoken:jjwt:0.9.1'

	// lombok
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// configuration
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// apache commons
	implementation 'org.apache.commons:commons-lang3:3.12.0'

	// swagger
	implementation 'io.springfox:springfox-boot-starter:3.0.0'

	// coolsms(휴대폰인증)
	implementation group: 'net.nurigo', name: 'javaSDK', version: '2.2'

	// s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// Querydsl
	implementation 'com.querydsl:querydsl-jpa'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jpa"
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

}

test {
	useJUnitPlatform()
}

jar {
	enabled = false
}
